@@ -108,6 +108,7 @@ VOID PhInitializeFont(
 extern GUID XP_CONTEXT_GUID;
 extern GUID VISTA_CONTEXT_GUID;
 extern GUID WIN7_CONTEXT_GUID;
+extern GUID WIN8_CONTEXT_GUID;
 
 PHAPPAPI
 BOOLEAN PhGetProcessIsSuspended(
