@@ -186,8 +186,9 @@ FORCEINLINE VOID PhChangeShStateTn(
 #define PHPRTLC_MAXIMUMWORKINGSET 69
 #define PHPRTLC_PRIVATEBYTESDELTA 70
 #define PHPRTLC_SUBSYSTEM 71
+#define PHPRTLC_PACKAGENAME 72
 
-#define PHPRTLC_MAXIMUM 72
+#define PHPRTLC_MAXIMUM 73
 #define PHPRTLC_IOGROUP_COUNT 9
 
 #define PHPN_WSCOUNTERS 0x1
