@@ -3,8 +3,10 @@ Process Hacker
 2.22
  * NEW/IMPROVED:
    * Added highlighting for metro style apps
+   * Added Package Name column
    * Added package name to process tooltip
    * Improved .NET process detection
+   * Updated OS Context column for Windows 8
    * Updated ExtendedTools plugin:
      * Updated disk monitoring for Windows 8
      * Updated memory list information for Windows 8
@@ -14,6 +16,7 @@ Process Hacker
    * Fixed memory leaks
    * Fixed bug preventing Interrupts/DPCs from being shown 
      as the max. CPU process on 64-bit systems
+   * Fixed DEP Status column on 64-bit systems
 
 2.21
  * NEW/IMPROVED:
